package NYT.NExecNode.NProto;

import "yt_proto/yt/core/misc/proto/error.proto";
import "yt_proto/yt/core/misc/proto/guid.proto";

import "yt_proto/yt/client/misc/proto/workload.proto";

import "yt/ytlib/core_dump/proto/core_info.proto";

import "yt/ytlib/job_tracker_client/proto/job.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqGetJobSpec
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspGetJobSpec
{
    required NJobTrackerClient.NProto.TJobSpec job_spec = 1;
    required TJobProxyResources resource_usage = 2;
    repeated int32 ports = 3;
}

////////////////////////////////////////////////////////////////////////////////

message TReqOnJobProxySpawned
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspOnJobProxySpawned
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqPrepareArtifact
{
    required NYT.NProto.TGuid job_id = 1;
    required string artifact_name = 2;

    // Artifact will be streamed into this pipe.
    required string pipe_path = 3;
}

message TRspPrepareArtifact
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqOnArtifactPreparationFailed
{
    required NYT.NProto.TGuid job_id = 1;

    required string artifact_name = 2;
    required string artifact_path = 3;
    required NYT.NProto.TError error = 4;
}

message TRspOnArtifactPreparationFailed
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqOnArtifactsPrepared
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspOnArtifactsPrepared
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqOnJobPrepared
{
    required NYT.NProto.TGuid job_id = 1;
}

message TRspOnJobPrepared
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqOnJobFinished
{
    required NYT.NProto.TGuid job_id = 1;
    required NJobTrackerClient.NProto.TJobResult result = 2;
    required bytes statistics = 3; // YSON
    optional uint64 start_time = 4;
    optional uint64 finish_time = 5;
    optional bytes job_stderr = 6;
    optional bytes fail_context = 7;

    optional string profile_type = 8;
    optional string profile_blob = 9;
    optional double profiling_probability = 11;

    repeated NYT.NCoreDump.NProto.TCoreInfo core_infos = 10;
}

message TRspOnJobFinished
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqOnJobProgress
{
    required NYT.NProto.TGuid job_id = 1;
    required double progress = 2;
    required bytes statistics = 3; // YSON
    optional uint64 stderr_size = 4;
}

message TRspOnJobProgress
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqUpdateResourceUsage
{
    required NYT.NProto.TGuid job_id = 1;
    required TJobProxyResources resource_usage = 2;
}

message TRspUpdateResourceUsage
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqThrottleJob
{
    required int32 throttler_type = 1; //EJobThrottlerType
    required int64 amount = 2;
    required NYT.NProto.TWorkloadDescriptor workload_descriptor = 3;
    required NYT.NProto.TGuid job_id = 4;
}

message TRspThrottleJob
{
    // If request_id is not returned, then request is fulfilled immediately.
    optional NYT.NProto.TGuid throttling_request_id = 1;
}
////////////////////////////////////////////////////////////////////////////////

message TReqPollThrottlingRequest
{
    optional NYT.NProto.TGuid throttling_request_id = 1;
}

message TRspPollThrottlingRequest
{
    required bool completed = 1;
}

////////////////////////////////////////////////////////////////////////////////

// Describes the resource usage of job proxy (possibly, combined with user job resource usage).
message TJobProxyResources
{
    required int64 memory = 1;
    required double cpu = 2;
    required int32 network = 3;
}

////////////////////////////////////////////////////////////////////////////////
